--- a/test/reame_개발일지_08282155.md
+++ b/test/reame_개발일지_08282155.md
@@ -44,6 +44,9 @@ D. 가이드라인 보강
 E. UI 변경
 	•	가이드(GUIDE)를 토글 버튼식으로 변경하여 사용자 화면 간소화
 	•	AI 자기소개서 변경+ 헤더 디자인을 둥글게 변경
+	•	페이지 헤더 "AI 자기소개서 코칭+" 확대
+	•	상단 탭 "대화" "자소서 평가" "트렌드/기업" 확대
+	•	"사용 가이드" 버튼 위치 조정 및 토글시 가이드 표시
 
 ⸻
 
